tests/NormalTests/paczka1/fuzzy1/48166560.err
Error in line 5: 23DrqdK S726 71,8
Error in line 2: SIm7F4yza S726 4,1
Error in line 6: 23DrqdK S478 92,1
Error in line 16: S478 S478 47,6
Error in line 22: 23DrqdK S726 14,46
Error in line 14: pGOOEPZnFZn S78 5,7
Error in line 21: sIlRmEEWzud S478 6,8
